testament/tests/shouldfail/tmaxcodesize.nim
discard """
  maxcodesize: 1
"""

echo "Hello World"
